--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   </style>
 </head>
 <body><header>
-  <h1>Sushi Jepang Asli untuk Lidah Indonesia</h1>
+  <h1>Sushi Khas Jepang Asli untuk Lidah Indonesia</h1>
   <p>Rasa autentik, kualitas premium, pengalaman tak terlupakan.</p>
 </header><div class="container">
   <div class="card">
